# FreeRTOS-PI7

PicoW-freertos-smp/: .gitignore  CMakeLists.txt  README.md
PicoW-freertos-smp/__MACOSX/: ._README.md
PicoW-freertos-smp/__MACOSX/src/: ._FreeRTOSConfig.h  ._main.c
PicoW-freertos-smp/src/: CmakeLists.txt  lwipopts.h  main.c  modbus_crc.h  modbus_slave.c  modbus_slave.h
PicoW-freertos-smp/src/arch/: sys_arch.h
pico-sdk/lib/lwip/contrib/ports/freertos/: sys_arch.c
pico-sdk/lib/mbedtls/: CMakeLists.txt
pico-sdk/src/rp2_common/pico_lwip/include/arch/: cc.h
pico-sdk/tools/pioasm/: CMakeLists.txt  output_format.h
